# UAV-Flow-Gr00t

./: .gitignore  README.md  debug.py  main.py  pyproject.toml  uav_flow_2_lerobot.py  vln_ce.py  vln_n1.py  vln_n1_accelerate.py  vln_n1_v2.py
client/: README.md  policy_client.py
docs/: vln_ce.md  vln_n1.md
examples/gr00t_example/: inference_uav_flow.sh  train_uav_flow.sh
examples/gr00t_example/UAV_Flow/: custom_data_config.py
examples/vln-n1_example/: modality.json
profile/: profile_vln_n1_traj.py
scripts/: vln_ce.sh  vln_ce_simple.sh  vln_n1.sh  vln_n1_simple.sh
test/: debug_vln_ce.py  find_farthest_points.py  test_lerobot.py  test_vln_v1_v2.py  vln_ce_recon.py  vln_ce_test.py  vln_n1_obstacle.py  vln_n1_obstacle_stat.py
utils/: README.md  __init__.py  coordinate.py  draw.py  example_data.json  obstacle.py  rotation.py  trajectory.py  video.py
utils/lerobot/: __init__.py  compute_stats.py  image_writer.py  lerobot_creater.py  lerobot_metadata.py  video_utils.py
utils/vln_ce/: __init__.py  trajectory.py
utils/vln_n1/: __init__.py  trajectory.py
utils/vln_n1_v2/: __init__.py  trajectory.py
